syntax= "proto3";

package blog;
option go_package="./blog/blogpb";

message Blog{
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest   {
    Blog blog = 1;  // this will not contain the blog id, as it will be created automatically
}

message CreateBlogResponse {
    Blog blog = 1;  // this will contain the blog id
}

message ReadBlogRequest {
    string blog_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

message DeleteBlogRequest {
    string blog_id = 1;
}

message DeleteBlogResponse {
    string blog_id = 1;
}

message ListBlogRequest {

}

message ListBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};

    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {}; // return NOT FOUND if not found

    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {}; // return NOT FOUND if not found

    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {}; // return NOT Found if not found

    rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse) {};
}